--- a/Css_acceuil.css
+++ b/Css_acceuil.css
@@ -1,5 +1,6 @@
 #filmsContainer {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
     flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
@@ -15,7 +16,7 @@
     border-radius: 10px;
 }
 
-#loadMoreBtn {
+#Plus {
     display: block;
     margin: 20px auto;
     padding: 10px 20px;
@@ -26,6 +27,6 @@
     cursor: pointer;
 }
 
-#loadMoreBtn:hover {
+#Plus:hover {
     background-color: #0056b3;
 }
