--- a/Css_acceuil.css
+++ b/Css_acceuil.css
@@ -2,18 +2,25 @@
     display: grid;
     grid-template-columns: repeat(3,1fr);
     flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
+    justify-content: space-around;
+    margin-top: 60px;     
+    width: 100%;   
+    margin-left: 115px;
 }
 
 .film {
-    width: 200px;
+    width: 400px;
     text-align: center;
+    color: white;
+    flex-direction: column; 
+    align-items: center;    
 }
 
 .film img {
     width: 100%;
     border-radius: 10px;
+    object-fit: cover;
+    margin-top: 60px;
 }
 
 #Plus {
@@ -22,7 +29,6 @@
     padding: 10px 20px;
     background-color: #007bff;
     color: white;
-    border: none;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -30,3 +36,38 @@
 #Plus:hover {
     background-color: #0056b3;
 }
+
+header {
+    color: #f2b22c;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: black;
+    height: 10%;
+    padding: 20px;
+
+}
+
+body{
+    background-image: url("fond\ acceuil\ 4.jpeg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center center;
+    margin:auto;
+    padding:auto;
+    }
+
+h2{
+    text-align: center;
+    color: white;
+}
+
+.acceuil{
+    margin-left: 115px;
+}
+
+a{
+    text-decoration: none;
+    color: #f2b22c;
+  }
