--- a/cssMovie.css
+++ b/cssMovie.css
@@ -1,14 +1,3 @@
-body {
-    background-image: url("fond\ acceuil\ 4.jpeg");
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center center;
-    margin: auto;
-    padding: auto;
-    font-family: Arial, sans-serif;
-    color: white;
-    text-align: center;
-}
 header {
     color: #f2b22c;
     width: 100%;
@@ -20,6 +9,19 @@ header {
     padding: 20px;
 
 }
+
+body {
+    background-image: url("fond\ acceuil\ 4.jpeg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center center;
+    margin: auto;
+    padding: auto;
+    color: white;
+    text-align: center;
+}
+
+
 
 .acceuil{
     margin-left: 115px;
@@ -49,25 +51,36 @@ a{
     justify-content: center;
 }
 
-#plotes{
+#plot{
     color: white;
     text-align: center;
     margin: 20px;
+    font-size:  1.2rem;
 }
 #acteurs{
     color: white;
     text-align: center;
     margin: 20px;
+    font-size:  1.2rem;
 }
 #genre{
     color: white;
     text-align: center;
     margin: 20px;
+    font-size:  1.2rem;
 }
 #notes{
-    color: white;
+    color:white;
     text-align: center;
     margin: 20px;
+    font-size:  1.2rem;
 }
 
-
+#txt{
+    background-color: rgba(149, 149, 149, 0.9); /* Couleur semi-transparente */
+    border-radius: 1em; /* Coins arrondis */
+    display: inline-block; /* Ajuste la largeur à celle du contenu */
+    padding: 20px; /* Espacement interne pour éviter que le texte touche les bords */
+    margin: 20px auto; /* Centrage horizontal et espacement vertical */
+    text-align: center; /* Centrer le texte */
+}
